fixed color and overflow

--- a/styles/header.css
+++ b/styles/header.css
@@ -76,13 +76,19 @@ button {
   display: block;
 }
 
-.nav-active::after {
+/* .nav-active::after {
   display: block;
-  content: '0 ';
+  content: '';
   position: absolute;
   width: 100%;
   height: 5px;
   background-color:  red;
+} */
+
+.nav-active {
+  background-color: #0096c7;
+  padding: 5px 10px;
+  color: hsl(100, 100%, 100%);
 }
 
 .phone-number {
